--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
             limpo, objetivo.</p>
         </section>
         <section id="droid-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
+            <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </section>
         <section id="container-versions">
             <h1>Quer aprender mais?</h1>
             <div class="list">
