alteração dos alts das imagens

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             a criação de um mascote.</p>
         <picture>
             <source media="(max-width: 600px)" srcset="assets/img/dan-droids-pq.png" type="image/png">
-            <img src="assets/img/dan-droids.png" alt="Dandroids">
+            <img src="assets/img/dan-droids.png" alt="Primeiro mascote do android">
         </picture>
         <h2>Surge um novo mascote</h2>
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. 
@@ -43,12 +43,12 @@
             o pequeno robô de uma maneira mais agradável.</p>
         <picture>
                 <source media="(max-width: 600px)" srcset="assets/img/irina-blok-pq.jpg" type="image/jpg">
-                <img src="assets/img/irina-blok.jpg" alt="Irina Blok">
+                <img src="assets/img/irina-blok.jpg" alt="Irina Blok criadora do bugdroid">
         </picture>
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. 
             O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote 
             do Android.</p>
-        <picture><img src="assets/img/bugdroid.png" alt="Bugdroid" id="bugdroid"></picture>
+        <picture><img src="assets/img/bugdroid.png" alt="Novo mascote Android" id="bugdroid"></picture>
         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas 
             de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua 
             mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, 
