abreviações nas versoes do android

--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
             <h1>Quer aprender mais?</h1>
             <div class="list">
                 <ul>
-                    <li>1.5 - Cupcake</li>
-                    <li>1.6 - Donut</li>
-                    <li>3.0 - Eclair</li>
-                    <li>2.2 - Froyo</li>
-                    <li>2.3 - Gingerbread</li>
-                    <li>3.0 - Honeycomb</li>
-                    <li>4.0 - Ice Cream Sandwich</li>
+                    <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
+                    <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
+                    <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
+                    <li>2.2 - <abbr title="Iogurte congelado">Froyo</abbr></li>
+                    <li>2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr></li>
+                    <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
+                    <li>4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr></li>
                 </ul>
             </div>
             <div class="list">
                 <ul>
-                    <li>4.1 - Jelly Bean</li>
-                    <li>4.4 - KitKat</li>
-                    <li>5.0 - Lollipop</li>
-                    <li>6.0 - Marshmallow</li>
-                    <li>7.0 - Nougat</li>
-                    <li>8.0 - Oreo</li>
-                    <li>9.0 - Pie</li>
+                    <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
+                    <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
+                    <li>5.0 - <abbr title="Pirulito">Lollipop</abbr></li>
+                    <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+                    <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
+                    <li>8.0 - <abbr title="Biscoito Oreo">Oreo</abbr></li>
+                    <li>9.0 - <abbr title="Torta">Pie</abbr></li>
                 </ul>
             </div>
             <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida 
