--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida 
             prática e começou a usar numerações, o que deu origem ao Android 10.</p>
-            <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/">Android History</a> para conhecer a sequência das versões "adocicadas" 
+            <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" 
             e o que cada uma trouxe para o sistema Android.</p>
         </section>
         <section class="content">
