--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             </section>
-        <section id="container-versions">
+        <aside>
             <h1>Quer aprender mais?</h1>
-            <div class="list">
                 <ul>
                     <li>1.5 - <abbr title="Bolo de copo">Cupcake</abbr></li>
                     <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
@@ -70,10 +69,6 @@
                     <li>2.3 - <abbr title="Biscoito de gengibre">Gingerbread</abbr></li>
                     <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
                     <li>4.0 - <abbr title="Sanduíche de sorvete">Ice Cream Sandwich</abbr></li>
-                </ul>
-            </div>
-            <div class="list">
-                <ul>
                     <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
                     <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
                     <li>5.0 - <abbr title="Pirulito">Lollipop</abbr></li>
@@ -82,12 +77,11 @@
                     <li>8.0 - <abbr title="Biscoito Oreo">Oreo</abbr></li>
                     <li>9.0 - <abbr title="Torta">Pie</abbr></li>
                 </ul>
-            </div>
             <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida 
             prática e começou a usar numerações, o que deu origem ao Android 10.</p>
             <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" 
             e o que cada uma trouxe para o sistema Android.</p>
-        </section>
+        </aside>
         <section class="content">
         <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </section>
